# Arduino_Import_Module

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
arduino-mod/: .gitignore  .vscode-test.js  .vscode-test.mjs  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  arduino-mod-0.0.1.vsix  esbuild.js  package-lock.json  package.json  tsconfig.json
arduino-mod/src/: UI.ts  UIItem.ts  board.ts  boardsInfo.ts  cmaker.ts  cmakerBuilder.ts  constants.ts  example.ino  extension.ts  flagParser.ts  flagParserClassTemp.ts  importproj.ts  main_cpp.cpp  parser.ts  platform.txt  recipeBuilder.ts
arduino-mod/src/panels/: MainPanel.ts  OptionsPanel.ts
arduino-mod/src/test/: manualtests.ts
arduino-mod/src/test/suite/: extension.test.ts
arduino-mod/src/test/testfiles/: Blink.ino
arduino-mod/src/webview/: main.ts  styles.css
src/: boardsInfo.ts  cmaker.ts  extension.ts  importproj.ts
src/panels/: MainPanel.ts
src/utilities/: getNonce.ts  getUri.ts
